Added useful information in returns from ProjectStorage API
